@@ -8,6 +8,8 @@ Cortana Updates (for scripters)
 --------
 - s_cmd no longer times out after 60s. It will wait forever for
   a command to complete now.
+- added shell_read event which fires when a shell s_cmd comes
+  back with intermediate output.
 
 2 Aug 12 (tested again msf r15698)
 --------
